Split setting the user ID and the participant name
The user ID was set when a new participant was found in the list of
participants and then cached to be used elsewhere. The only exception
was the handling of the "nick" event, in which the user ID is sent with
the event if the MCU is used (if the MCU is not used the event is only
triggered for guests so no user ID is set).

With this change the user ID is now set after the VideoView was shown.
Due to this "imageplaceholder()" now gets the height from the element
instead of using the given one, so it needs to be overriden in the CSS
rules to ensure that the right size is used.

Signed-off-by: Daniel Calviño Sánchez <danxuliu@gmail.com>

--- a/css/video.scss
+++ b/css/video.scss
@@ -95,6 +95,20 @@
 		left: 0;
 		width: 100%;
 	}
+
+	/* Text avatars need to be forced to 128px, as imageplaceholder() overrides
+	 * the given size with the actual height of the element it was called on, so
+	 * the text avatar may have any hardcoded height. Note that this does not
+	 * apply to regular image avatars, as in that case they are always requested
+	 * with a size of 128px. */
+	.videoContainer .avatar-container .avatar {
+		width: 128px !important;
+		height: 128px !important;
+		line-height: 128px !important;
+		/* imageplaceholder() sets font-size to "height * 0.55" */
+		font-size: 70.4px !important;
+	}
+
 	.videoContainer .avatar-container .avatar {
 		margin-left: auto;
 		margin-right: auto;
