Handle audio and video available events in CallParticipantModel
Before, before the connection was established, "audio available" was
true, so the icon was not shown. Now "audio available" is explicitly
"undefined" before the connection is established, which also hides the
icon.

Signed-off-by: Daniel Calviño Sánchez <danxuliu@gmail.com>

--- a/css/video.scss
+++ b/css/video.scss
@@ -335,6 +335,7 @@
 	}
 
 	.muteIndicator.audio-on,
+	.muteIndicator:not(.audio-on):not(.audio-off),
 	.screensharingIndicator.screen-off,
 	.iceFailedIndicator.not-failed {
 		display: none;
